# indicator-location

./: .bzrignore  CMakeLists.txt  INSTALL  NEWS  README
data/: CMakeLists.txt  indicator-location.conf.in
debian/: changelog  control  indicator-location.maintscript  rules
po/: aa.po  af.po  az.po  be.po  bg.po  br.po  bs.po  ca@valencia.po  cs.po  cy.po  da.po  el.po  en_AU.po  en_GB.po  eo.po  eu.po  fo.po  fr_CA.po  gd.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  ja.po  km.po  ko.po  ku.po  lv.po  mk.po  mr.po  my.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+13 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt
